# zoekt-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: github-release.yml  release.yml
tests/: test.py  test_client.py  test_integration.py  test_utils.py
zoektpy/: __init__.py  cli.py  client.py  exceptions.py  models.py  utils.py
